--- a/trunk/bin/play.html
+++ b/trunk/bin/play.html
@@ -28,7 +28,7 @@
 	</script>-->
 	<style>
 		html, body { height:100%; overflow:hidden; }
-		body { background-image: url(Images/Menu/menustate_background.jpg); margin:0; }
+		body { background-image: url(Images/Web/grass.png); margin:0; }
 		object { padding: 0px; margin: 0px; }
 		#flash { border: 5px solid black; width: 640px; height: 480px; text-align: center; padding: 0px; margin: auto; margin-top: 50px; }
 	</style>
