--- a/trunk/bin/index.html
+++ b/trunk/bin/index.html
@@ -36,7 +36,7 @@
 <body>
 	<div id="flash">
 		<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,29,0" width="640" height="480">
-			<param name="movie" value="Iteration.swf">
+			<param name="movie" value="AntyAndTouky.swf">
 			<param name="quality" value="high">
 			<embed src="AntyAndTouky.swf" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="640" height="480"></embed>
 		</object>
