--- a/trunk/bin/index.html
+++ b/trunk/bin/index.html
@@ -26,6 +26,7 @@
 			"expressInstall.swf", 
 			flashvars, params, attributes);
 	</script>-->
+	
 	<style>
 		html, body { height:100%; overflow:hidden; }
 		body { background-image: url(Images/Web/tile_grass_center.jpg); margin:0; }
@@ -55,6 +56,21 @@
 			margin-top: 0px;
 		}
 	</style>
+	
+	<!-- Google Analytics -->
+	<script type="text/javascript">
+
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-34675958-1']);
+	  _gaq.push(['_trackPageview']);
+
+	  (function() {
+		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+
+	</script>
 </head>
 <body>
 	<div id="main">
